Aggiornamento: Bug di visualizzazione della vista settimanale da mobile risolto, è stato inserito un pulsante visibile da mobile per reindirizzare alla vista mensile se per caso viene visualizzata la vista settimanale + Rimossa gestione della cache aggressiva per i file della piattaforma + inserite più opzioni di registrazione tramite account (nome e cognome)

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -432,6 +432,17 @@ main {
     background-color: var(--aula);
 }
 
+#week-view-unavailable {
+    display: none !important;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    gap: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 #day-calendar-columns h3 span.today {
     background-color: var(--aula);
 }
@@ -1216,7 +1227,12 @@ footer {
     width: 100%;
 }
 
-#login-form, #register-form, #set-password-form {
+#login-form, 
+#register-form, 
+#register-by-name-form, 
+#set-password-form {
+    display: flex;
+    flex-direction: column;
     width: 450px;
     max-width: 100%;
     height: fit-content;
@@ -1229,7 +1245,31 @@ footer {
     box-shadow: 0 0px 400px 0 var(--black-3);
 }
 
-#login-form h1, #register-form h1, #set-password-form h1 {
+#login-form .divider,
+#register-form .divider,
+#set-password-form .divider,
+#register-by-name-form .divider {
+    margin-block: 10px;
+}
+#change-initial-form, #change-type-form {
+    width: 100%;
+    text-decoration: none;
+    max-height: none;
+}
+
+#login-form a,
+#register-form a,
+#register-by-name-form a,
+#set-password-form a {
+    width: 100%;
+    text-decoration: none;
+    max-height: none;
+}
+
+#login-form h1, 
+#register-form h1, 
+#set-password-form h1, 
+#register-by-name-form h1 {
     line-height: 1.1;
     text-wrap: balance;
 }
@@ -1750,8 +1790,4 @@ input[type="checkbox"] {
 }
 .side-menu-btn--danger:hover {
     background-color: var(--red);
-}
-
-@media (min-width: 800px) {
-    #modal-menu { display: none !important; }
 }
